# curve_fit_py

./: README.md  pyproject.toml
src/curve_fitpy_Paiela1/: __init__.py  curve_fit_py.py
