[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curve_fitpy_Paiela1"
version = "0.0.1"
authors = [
  { name="Giovanni Paiela", email="jovpa47@gmail.com" },
]
description = "Finds the coefficients of a function **f(x)** that best fits an array of data points."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Paiela/curve_fit_py"
Issues = "https://github.com/Paiela/curve_fit_py/issues"
